--- a/participante.html
+++ b/participante.html
@@ -56,7 +56,7 @@
                 <p class="progress-text">
                     <span data-i18n="participant.peer.progress">Evaluando</span>: 
                     <strong id="currentPeerName"></strong> 
-                    (<span id="currentPeerNumber">1</span>/8)
+                    (<span id="currentPeerNumber">1</span>/<span id="totalPeersCount">8</span>)
                 </p>
                 
                 <h2 data-i18n="participant.peer.instruction">Selecciona 5-6 adjetivos que describan a esta persona:</h2>
