refactor: rename participant files to English and translate documentation and scripts

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ol>
                 
                 <div class="navigation-buttons">
-                    <a href="participante.html" class="btn-primary" data-i18n="codes.participant">Ir a página de participante</a>
+                    <a href="participant.html" class="btn-primary" data-i18n="codes.participant">Ir a página de participante</a>
                     <a href="admin.html" class="btn-primary" data-i18n="codes.adminPanel">Ir a panel administrador</a>
                 </div>
             </div>
