feat: add Firestore backend and improve deployment
- Add Node.js/Express backend with Firestore integration
- Implement REST API endpoints for session management
- Update all data operations to use async/await with API calls
- Fix API base URL logic to support relative URLs
- Add button to start new session
- Improve deployment script to use project from gcloud config
- Add validation for session structure
- Update all async functions throughout the app

--- a/admin.html
+++ b/admin.html
@@ -63,6 +63,10 @@
         </main>
     </div>
 
+    <script>
+        // API Base URL - set via environment variable or default to localhost
+        window.API_BASE_URL = window.API_BASE_URL || '';
+    </script>
     <script src="js/i18n.js"></script>
     <script src="js/data.js"></script>
     <script src="js/johari.js"></script>
