feat: add view all adjectives modal and fix UX issues
- Add modal to view all adjectives in all quadrants when clicking 'View all' button
- Fix admin password display by renaming display element ID
- Remove sensitive password logs from console
- Fix progress screen to show 'All completed' message when all participants finish
- Remove participant names from progress list for anonymity
- Fix placeholder to show 'Código' instead of 'Código 2' in login screens
- Add setTimeout for event listeners to ensure DOM availability
- Use correct property names (openArea, blindArea, etc.) for window data

--- a/participant.html
+++ b/participant.html
@@ -91,7 +91,7 @@
                         <span class="refresh-indicator" data-i18n="participant.complete.autoRefresh">Actualizando automáticamente</span>
                     </div>
                     <div class="progress-info">
-                        <p id="progressText" data-i18n="participant.complete.progress">Completado: <strong>1/8</strong> participantes</p>
+                        <p id="progressText">Completado: <strong>0/0</strong> participantes</p>
                         <div class="progress-list" id="progressList"></div>
                     </div>
                 </div>
@@ -99,7 +99,10 @@
                 <div class="result-preview">
                     <h3 data-i18n="participant.complete.preview">Vista previa de tu ventana:</h3>
                     <canvas id="previewCanvas" width="600" height="600"></canvas>
-                    <button class="btn-secondary" id="downloadPreview" data-i18n="participant.complete.download">Descargar mi ventana</button>
+                    <div style="display: flex; gap: 10px; justify-content: center;">
+                        <button class="btn-secondary" id="downloadPreview" data-i18n="participant.complete.download">Descargar mi ventana</button>
+                        <button class="btn-secondary" id="viewAllAdjectives" data-i18n="participant.complete.viewAll">Ver todos los adjetivos</button>
+                    </div>
                 </div>
             </div>
         </main>
